--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
   </style>
 </head>
 
-<body class="bg-dark">
-  <div class="preloader bg-secundary">
+<body>
+  <!-- <div class="preloader bg-secundary">
     <div class="text-container">
       <h1>Hola!,</h1>
       <h1 id="Saludo"></h1>
@@ -81,7 +81,7 @@
         greeting.textContent = greetingText;
       </script>
     </div>
-  </div>
+  </div> -->
   <app-root></app-root>
 
   <script>
